<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/course_image"
        android:contentDescription="@string/image_pf"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:src="@drawable/user_profile_icon"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="44dp">

            <TextView
                android:id="@+id/instructor_course_list_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_info"
                android:fontFamily="serif"
                android:textColor="#039be5"
                android:textStyle="bold"
                android:layout_margin="4dp"/>



            <TextView
                android:id="@+id/instructor_course_list_salary_per_child_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_margin="4dp"
                android:text="@string/empty_info"/>

            <TextView
                android:id="@+id/instructor_child_list_hours_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_margin="4dp"
                android:text="@string/empty_info"/>


            <TextView
                android:id="@+id/instructor_course_list_duration_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_margin="4dp"
                android:text="@string/empty_info"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/instructor_course_list_select__image_view"
            android:contentDescription="@string/image_dt"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:tint="@android:color/holo_green_dark"
            android:src="@drawable/ic_done_black_18dp"/>

    </RelativeLayout>

</LinearLayout>